--- a/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
+++ b/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
@@ -748,8 +748,7 @@
                             </div>
                             <div class="col-md-6">
                                 <label for="description" class="form-label">Описание</label>
-                                <textarea class="form-control" id="description" name="description" rows="2" cols="50">
-                                </textarea>
+                                <textarea class="form-control" id="description" name="description" rows="2" cols="50"></textarea>
                             </div>
                             <div class="col-md-6">
                                 <label for="time" class="form-label">Время</label>
